--- a/style.css
+++ b/style.css
@@ -1,1 +1,82 @@
-/* No CSS */
+@charset "utf-8";
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+main::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('./assets/bg.jpg') no-repeat 0 0 / cover;
+    opacity: 0.6;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    width: calc(100vw - 20px);
+    height: 100vh;
+}
+
+.ball_answer {
+    text-align: center;
+    width: 180px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    font-size: 18px;
+}
+
+.ball_question {
+    margin-top: 30px;
+    padding:30px;
+    font-size: 20px;
+    background: #333;
+    text-align: center;
+    color: #fff;
+}
+
+.ball_question span {
+    display: block;
+    margin-top: 20px;
+    font-size: 16px;
+}
+
+.ball_question span em {
+    font-style: normal;
+}
+
+form {
+    display: flex;
+    margin-top: 30px;
+}
+
+ .ball_input {
+    width: 100px;
+    height: 30px;
+    border: 1px solid #ccc;
+}
+
+form button {
+    background-color: #333;
+    border: none;
+    width: 70px;
+    height: 30px;
+    margin-left: 10px;
+    padding: 0 10px;
+    color: #fff;
+    cursor: pointer;
+}
